fixed problems with image cropper buttons

--- a/src/app/views/organization/org-admin-org/org-admin-org.component.scss
+++ b/src/app/views/organization/org-admin-org/org-admin-org.component.scss
@@ -21,7 +21,7 @@
 #logoHide {
   position: relative;
   top:-340px;
-  width: 350px;
+  width: 300px;
   height: 38px;
   pointer-events: none;
 }
@@ -29,7 +29,7 @@
 #bannerHide {
   position: relative;
   top:-140px;
-  width: 1000px;
+  width: 350px;
   height: 38px;
   pointer-events: none;
 }
